--- a/index.html
+++ b/index.html
@@ -32,36 +32,18 @@ var options = {
 
 <body>
 <h1><a href="http://en.wikipedia.org/wiki/Barnes%E2%80%93Hut_simulation">Barnes-Hut N-Body Simulation</a></h1>
-
-			<button type="button" onclick="randomBodies(100)">Add 100 Random Bodies</button>
-			or choose input file (JSON)<input type="file" id="fileInputs" name="files[]" accept="json" /></br>
-			<output id="fileList"></output>
 			<canvas id="bnCanvas" width="800" height="400"></canvas>
 				
 			<button type="button" onclick="toggleArrows()">Arrows</button>
-			<button type="button" onclick="toggleShowBNtree()">BH-Tree</button>
-			<button type="button" onclick="resetSys()">Reset</button>
+			<button type="button" onclick="toggleShowBNtree()">BH-Tree</button>&nbsp;
 			<button type="button" onclick="stst(this)">Start</button>
-			<button type="button" onclick="pauseSys()">Stop</button>
+			<button type="button" onclick="resetSys()">Reset</button>&nbsp;
+			<button type="button" onclick="randomBodies(100)">+100 Random Bodies</button>
+			<input type="file" id="fileInputs" name="files[]" accept="json" />
+			dt range between 10<sup>-4</sup> and 10<sup>1</sup>: <input type="range" min="-4" max="1" value="-2" step="0.1" onchange="setDT(this.value)" /> <span id="dtSliderVal">0.01</span>
 
-			<div align=center>
-				<table border=0>
-					<tr><td colspan=3>
-						TIME: <b><output id="timeDisp">0.0</output></b><br/>
-						DT: <b><span id="dtSliderVal">0.01</span></b>
-					</td></tr>
-					<tr><td colspan=3 align="center">
-						
-					</td></tr>
-					<tr>
-						<td>DT</td>
-						<td>0.0001</td>
-						<td><input type="range" min="-4" max="1" value="-2" step=0.1 onchange="setDT(this.value)" /></td>
-						<td>10</td>
-					</tr>
-				</table>
-			</div>
 			<div id="data">
+				<p>T: <output id="timeDisp">0</output><br/>
 				Bodies: <output id="bodies">0</output><br/>
 				</p>
 				<p>
